<resources>
    <string name="app_name">My App Portofolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textview_title">My Nanodegree Apps!</string>
    <string name="Spotify_Streamer">SPOTFIY STREAMER</string>
    <string name="Scores_App">SCORES APP</string>
    <string name="Library_App">LIBRARY APP</string>
    <string name="Build">BUILD IT BIGGER </string>
    <string name="Xyz">XYZ READER </string>
    <string name="own_app">CAPSTONE:MY OWN APP </string>
    <string name="spotify_message">This button will launch my MEDIA STREAMER app!</string>
    <string name="score_message">This button with lauch my SCORES app!</string>
    <string name="library_message">This button will launch my LIBRARY app!</string>
    <string name="build_message">This button will launch my gradle project!</string>
    <string name="xyz_message"> This button with launch my XYZ app!</string>
    <string name="own_app_message">This button will launch my CAPSTONE app! </string>
</resources>
