<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/textview_title"
       android:textSize="25dp"
       android:id="@+id/title_textview"
       android:layout_centerHorizontal="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spotifyStreamerbutton"
        android:text="@string/Spotify_Streamer"
        android:textSize="@dimen/button_textsize"
        android:padding="@dimen/button_padding"
        android:gravity="center"
        android:background="#FFA500"
        android:layout_below="@id/title_textview"
        android:layout_marginTop="@dimen/title_margin"
        android:layout_alignRight="@+id/title_textview"
        android:layout_alignEnd="@+id/title_textview"
        android:layout_alignLeft="@+id/title_textview"
        android:layout_alignStart="@+id/title_textview"
        android:layout_marginLeft="@dimen/firstbutton_margin"
        android:layout_marginRight="@dimen/firstbutton_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoresAppbutton"
        android:layout_below="@id/spotifyStreamerbutton"
        android:text="@string/Scores_App"
        android:layout_marginTop="@dimen/margin_top_button"
        android:gravity="center"
        android:textSize="@dimen/button_textsize"
        android:background="#FFA500"
        android:padding="@dimen/button_padding"
        android:layout_alignRight="@+id/spotifyStreamerbutton"
        android:layout_alignEnd="@+id/spotifyStreamerbutton"
        android:layout_alignLeft="@+id/spotifyStreamerbutton"
        android:layout_alignStart="@+id/spotifyStreamerbutton" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/libraryApp"
        android:layout_below="@id/scoresAppbutton"
        android:text="@string/Library_App"
        android:layout_marginTop="@dimen/margin_top_button"
        android:gravity="center"
        android:textSize="@dimen/button_textsize"
        android:background="#FFA500"
        android:padding="@dimen/button_padding"
        android:layout_alignRight="@+id/spotifyStreamerbutton"
        android:layout_alignEnd="@+id/spotifyStreamerbutton"
        android:layout_alignLeft="@+id/spotifyStreamerbutton"
        android:layout_alignStart="@+id/spotifyStreamerbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/build_big"
        android:layout_below="@id/libraryApp"
        android:text="@string/Build"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="@dimen/button_textsize"
        android:background="#FFA500"
        android:padding="@dimen/button_padding"
        android:layout_alignRight="@+id/spotifyStreamerbutton"
        android:layout_alignEnd="@+id/spotifyStreamerbutton"
        android:layout_alignLeft="@+id/spotifyStreamerbutton"
        android:layout_alignStart="@+id/spotifyStreamerbutton" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xyz"
        android:layout_below="@id/build_big"
        android:text="@string/Xyz"
        android:layout_marginTop="@dimen/margin_top_button"
        android:gravity="center"
        android:textSize="@dimen/button_textsize"
        android:background="#FFA500"
        android:padding="@dimen/button_padding"
        android:layout_alignRight="@+id/spotifyStreamerbutton"
        android:layout_alignEnd="@+id/spotifyStreamerbutton"
        android:layout_alignLeft="@+id/spotifyStreamerbutton"
        android:layout_alignStart="@+id/spotifyStreamerbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/own_app"
        android:layout_below="@id/xyz"
        android:text="@string/own_app"
        android:layout_marginTop="@dimen/margin_top_button"
        android:gravity="center"
        android:textSize="@dimen/button_textsize"
        android:background="#FF0000"
        android:padding="@dimen/button_padding"
        android:layout_alignRight="@+id/spotifyStreamerbutton"
        android:layout_alignEnd="@+id/spotifyStreamerbutton"
        android:layout_alignLeft="@+id/spotifyStreamerbutton"
        android:layout_alignStart="@+id/spotifyStreamerbutton" />




</RelativeLayout>
